test/syc/bad/initintptr.c
/*
 * Expression is not constant
 */

int a = "ABC";
